# DocuChat

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
.github/workflows/: lint.yml  test.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/: __init__.py  chat.py  repos.py  search.py
backend/src/core/: config.py  database.py
backend/src/ingestion/: embedder.py  indexer.py  loader.py
backend/src/models/: schemas.py
backend/src/rag/: chain.py
backend/src/utils/: __init__.py  auth.py  cache.py  circuit_breaker.py  exceptions.py  headers.py  logging.py  ratelimit.py
backend/static/: index.html
backend/static/assets/: index-B-fjUOh7.css  index-CMRPGwU5.js  index-CPE9mYDs.css  index-DYFCIftS.js
backend/tests/: test_api.py  test_embedder.py  test_exceptions.py  test_loader.py  test_rag.py  test_schemas.py  test_security.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatWindow.tsx  ErrorBoundary.tsx  RepoUpload.tsx  Sidebar.tsx  SourceCitation.tsx  Toast.tsx
frontend/src/hooks/: useChat.ts
frontend/src/lib/: api.ts
