[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docu-chat"
version = "1.0.0"
description = "RAG chatbot for technical documentation from code repositories"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "onnxruntime>=1.18.0",
    "tokenizers>=0.19.0",
    "gitpython>=3.1.0",
    "httpx>=0.27.0",
    "aiofiles>=24.0.0",
    "python-multipart>=0.0.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"src/utils/ratelimit.py" = ["I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
